# betago

./: bot_v_bot.py  generate_zobrist.py  human_v_bot.py  pyproject.toml
dlgo/: goboard.py  goboard_slow.py  gotypes.py  utils.py  zobrist.py
dlgo/agent/: base.py  helpers.py  naive.py
tests/: test_board.py  test_utils.py
