[tool.poetry]
name = "betago"
version = "0.1.0"
description = ""
authors = ["Adrian Petrescu <adrian@apetre.sc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
